# dsh-cli

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE.md  README.md  README_CRATES_IO.md  SECURITY.md  all-safe.txt  autocompletion.md  commands.txt  developers.md  environment_variables.md  getting_started.md  getting_started_interactive.md  getting_started_script.md  local_datastreams.json  makefile  platforms-specification.md  quick_start.md  release-notes.md  run_dcli_commands.sh  rustfmt.toml  settings.md  settings_targets.md  todo.md  user_guide.md
cli/: Cargo.toml  README.md
cli/src/: app.rs  application.rs  arguments.rs  bucket.rs  capability.rs  command.rs  def_impl.rs  env.rs  flags.rs  main.rs  manifest.rs  processor.rs  secret.rs  subcommands.rs  subject.rs  tabular.rs  task.rs  topic.rs  vhost.rs
cli/src/formatters/: allocation_status.rs  app.rs  application.rs  bucket.rs  mod.rs  topic.rs
dcli/: Cargo.toml  KNOWN_ISSUES.md  README.md  commands.sh  commands.txt  dcli-release-notes.md  known-issues.md  run_dcli_commands.sh
dcli/src/: app.rs  application.rs  arguments.rs  autocomplete.rs  bucket.rs  capability.rs  capability_builder.rs  certificate.rs  context.rs  env.rs  filter_flags.rs  flags.rs  image.rs  main.rs  manifest.rs  metric.rs  modifier_flags.rs  processor.rs  proxy.rs  query_processor.rs  secret.rs  set.rs  setting.rs  settings.rs  stream.rs  subject.rs  target.rs  topic.rs  vhost.rs  volume.rs
dcli/src/formatters/: allocation_status.rs  app.rs  application.rs  autocomplete.rs  bucket.rs  certificate.rs  formatter.rs  list_table.rs  manifest.rs  mod.rs  proxy.rs  secret.rs  setting.rs  settings.rs  show_table.rs  stream.rs  string_table.rs  target.rs  task.rs  topic.rs  usage.rs  used_by.rs  volume.rs
dsh_api/: CHANGELOG.md  Cargo.toml  README.md  build.rs  dsh-api-release-notes.md
dsh_api/examples/: app_catalog.rs  app_catalog_app_configuration.rs  app_catalog_manifest.rs  application.rs  bucket.rs  common.rs  dsh_api_app_catalog.rs  dsh_api_client.rs  secret.rs  tasks.rs  test.rs
dsh_api/openapi_spec/: openapi_1_7_0.json  openapi_1_8_0.json  openapi_1_8_0_updated.json
dsh_api/src/: app.rs  app_catalog.rs  app_catalog_app_configuration.rs  app_catalog_manifest.rs  application.rs  bucket.rs  certificate.rs  dsh_api_client.rs  dsh_api_client_factory.rs  dsh_api_tenant.rs  lib.rs  platform.rs  proxy.rs  secret.rs  stream.rs  target_client.rs  task.rs  topic.rs  volume.rs
engine/: Cargo.toml  README.md  trifonius-engine-release-notes.md
engine/examples/: common.rs  compatible_resources.rs  deploy.rs  deploy_dry_run.rs  dsh_api_client.rs  dsh_services.rs  dshservices.rs  dshtopics.rs  pipeline_registry.rs  processor_config.rs  processor_registry.rs  processor_types.rs  processors.rs  resource_registry.rs  resource_types.rs  resources.rs  status.rs  undeploy.rs
engine/src/: dsh_api_client.rs  engine_target.rs  lib.rs  macros.rs  placeholder.rs  target_client.rs  version.rs
engine/src/application/: application.rs  application_config.rs  application_descriptor.rs  application_registry.rs  converters.rs  mod.rs
engine/src/pipeline/: mod.rs  pipeline.rs  pipeline_config.rs  pipeline_descriptor.rs  pipeline_instance.rs  pipeline_registry.rs
engine/src/processor/: mod.rs  processor.rs  processor_config.rs  processor_context.rs  processor_descriptor.rs  processor_instance.rs  processor_realization.rs  processor_registry.rs
engine/src/processor/application/: application.rs  application_config.rs  application_descriptor.rs  application_registry.rs  converters.rs  dsh_api.rs  mod.rs  platform.rs
engine/src/processor/dsh_app/: dsh_app_api.rs  dsh_app_config.rs  dsh_app_instance.rs  dsh_app_realization.rs  dsh_app_registry.rs  mod.rs
engine/src/processor/dsh_service/: dsh_api_client.rs  dsh_service.rs  dsh_service_api.rs  dsh_service_config.rs  dsh_service_implementation.rs  dsh_service_instance.rs  dsh_service_realization.rs  dsh_service_registry.rs  mod.rs
engine/src/processor/dshapp/: dshapp_api.rs  dshapp_config.rs  dshapp_instance.rs  dshapp_realization.rs  dshapp_registry.rs  mod.rs
engine/src/processor/dshservice/: dshservice_api.rs  dshservice_config.rs  dshservice_instance.rs  dshservice_realization.rs  dshservice_registry.rs  mod.rs
engine/src/resource/: mod.rs  resource.rs  resource_descriptor.rs  resource_instance.rs  resource_realization.rs  resource_registry.rs
engine/src/resource/dsh_topic/: dsh_topic_descriptor.rs  dsh_topic_instance.rs  dsh_topic_realization.rs  dsh_topic_registry.rs  dsh_topic_resource.rs  mod.rs  topic_registry.rs  topic_resource.rs
engine/src/resource/dshtopic/: dshtopic_descriptor.rs  dshtopic_instance.rs  dshtopic_realization.rs  dshtopic_registry.rs  mod.rs
engine/src/resource/topic/: mod.rs  topic_descriptor.rs  topic_registry.rs  topic_resource.rs
engine/src/topology/: mod.rs  topology_descriptor.rs
engine/tests/: dshapp-config-test.toml  pipeline-config-test.json  pipeline-config-test.yaml  pipeline_config_test.rs
engine/tests/hide/: pipeline-config-test-2.json  pipeline-config-test-3.yaml
engine/tests/pipelines/: pipeline-config-test-1.toml  pipeline-config-test.json  pipeline-config-test.toml  pipeline-config-test.yaml
engine/tests/processors/applications/: application-config-test.toml
engine/tests/processors/dsh-apps/: dsh-app-config-test.toml
engine/tests/processors/dsh-services/: dsh-service-config-test.toml
engine/tests/processors/dshapp/: dshapp-config-test.toml
engine/tests/processors/dshservice/: dshservice-config-test-1.toml  dshservice-config-test-2.toml  dshservice-config-test.toml  (+3 more)
tcli/: Cargo.toml  README.md
tcli/src/: app.rs  application.rs  bucket.rs  capability.rs  certificate.rs  env.rs  flags.rs  main.rs  manifest.rs  processor.rs  proxy.rs  secret.rs  stream.rs  subject.rs  topic.rs  vhost.rs  volume.rs
tcli/src/formatters/: allocation_status.rs  app.rs  application.rs  bucket.rs  certificate.rs  formatter.rs  mod.rs  proxy.rs  secret.rs  stream.rs  topic.rs  usage.rs  volume.rs
(+92 files in other folders)
