[package]
name = "dsh"
authors = ["Wilbert Schelvis, <wilbert.schelvis@kpn.com>", "KPN DSH Team, <unibox@kpn.com>"]
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Command line tool for DSH resource management API"
edition = "2021"
homepage = "https://www.kpn.com/dsh"
keywords = ["kpn", "dsh", "rest", "api", "cli"]
license = "Apache-2.0"
readme = "README_CRATES_IO.md"
repository = "https://github.com/kpn-dsh/dsh-cli"
rust-version = "1.79"
version = "0.4.0"

[profile.release]
opt-level = "s"

[features]
stream = []

[dependencies]

arboard = "3.4"
async-trait = "0.1"
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["color", "derive", "string", "wrap_help"] }
clap_complete = "4.5"
ctrlc = "3.4"
dsh_sdk = "0.5.0-rc.2"
env_logger = "0.11"
futures = "0.3"
homedir = "0.3"
itertools = "0.14"
keyring = { version = "3.6", features = ["apple-native", "windows-native"] }
lazy_static = "1.5"
log = "0.4"
open = "5.3"
regex = "1.11"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
tabled = { version = "0.17", features = ["ansi"] }
terminal_size = "0.4"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
toml = { version = "0.8", features = ["display"] }

# When publishing, alway use the crates.io dependency.
# dsh_api = { version = "0.4.0", features = ["generic"] }
# While developing use the relative path dependency to dsh_api.
dsh_api = { path = "../dsh-api/dsh-api", features = ["generic"] }
