[package]
name = "dsh"
authors = ["Wilbert Schelvis, <wilbert.schelvis@kpn.com>", "KPN DSH Team, <unibox@kpn.com>"]
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Command line tool for DSH resource management API"
edition = "2021"
homepage = "https://www.kpn.com/dsh"
keywords = ["kpn", "dsh", "rest", "api", "cli"]
license = "Apache-2.0"
readme = "README_CRATES_IO.md"
repository = "https://github.com/kpn-dsh/dsh-cli"
rust-version = "1.79"
version = "0.7.1"

[profile.release]
opt-level = "s"

[features]
manage = ["dsh_api/manage"]
robot = ["dsh_api/robot"]

[dependencies]
arboard = { version = "3.4", default-features = false }
async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["color", "derive", "string", "wrap_help", "usage"], default-features = false }
clap_complete = { version = "4.5", default-features = false }
ctrlc = { version = "3.4" }
dsh_sdk = { version = "0.6.1", features = ["bootstrap", "management-api-token-fetcher"] }
env_logger = { version = "0.11", features = ["humantime"], default-features = false }
futures = { version = "0.3", default-features = false }
homedir = { version = "0.3", default-features = false }
itertools = { version = "0.14", features = ["use_std"], default-features = false }
keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native"], default-features = false }
lazy_static = { version = "1.5", default-features = false }
log = { version = "0.4", default-features = false }
open = { version = "5.3", default-features = false }
regex = "1.11.1"
rpassword = { version = "7.3", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_yaml = { version = "0.9.33", default-features = false }
tabled = { version = "0.17", features = ["ansi"], default-features = false }
terminal_size = { version = "0.4", default-features = false }
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros"], default-features = false }
toml = { version = "0.8", features = ["display", "parse"], default-features = false }

# When publishing, alway use the crates.io dependency.
dsh_api = { version = "0.6.1", features = ["generic"] }
# While developing use the relative path dependency to dsh_api.
# dsh_api = { path = "../dsh-api/dsh-api", features = ["generic"] }
