[package]
name = "tcli"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.5", features = ["wrap_help"] }
#clapcmd = "0.3.3"
ctrlc = "3.4.4"
dsh_sdk = { version = "0.4.5", features = ["rest-token-fetcher"], default-features = false }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
#toml = "0.8.15"
trifonius-dsh-api = { path = "../dsh_api" }
