[package]
name = "dcli"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[features]
stream = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive", "string", "wrap_help"] }
clap_complete = "4.5"
ctrlc = "3.4"
env_logger = "0.11"
futures = "0.3"
homedir = "0.3"
lazy_static = "1.5"
log = "0.4"
regex = "1.11"
serde_json = "1.0"
toml = "0.8"
tabled = { version = "0.16", features = ["ansi"] }
termion = "4.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
itertools = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }

# While developing
# * simultaneously with the library: use the relative path dependency
# * dcli only: use either the crates.io or the git dependency
# When publishing
# * if possible/available, use the crates.io dependency
# * else use the git dependency
dsh-api = { path = "../../dsh-api/dsh-api" }
#dsh-api = "0.2.0"
#dsh-api = { git = "ssh://git@github.com/kpn-dsh/dsh-api.git", branch = "0.2.0" }
