[package]
name = "trifonius-dsh-api"
version = "1.7.0"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
dsh_sdk = { version = "0.4.5", features = ["bootstrap", "rdkafka", "rest-token-fetcher"], default-features = false }
futures = "0.3"
lazy_static = "1.5.0"
log = "0.4.22"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
prettyplease = "0.1.25"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "1.0"
