[package]
name = "trifonius-dsh-api"

authors.workspace = true
description.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dsh_sdk = { version = "0.4.5", features = ["rest-token-fetcher"], default-features = false }
lazy_static = "1.5.0"
#log = "0.4.22"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11" }
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
prettyplease = "0.1.25"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "1.0"
