[package]
name = "trifonius-dsh-api"

authors.workspace = true
description.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dsh_sdk = { version = "0.4", features = ["rest-token-fetcher"], default-features = false }
lazy_static = "1.5"
progenitor-client = "0.7"
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"
futures = "0.3"
futures-core = "0.3"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
prettyplease = "0.1"
progenitor = "0.7"
serde_json = "1.0"
syn = "1.0"
