[package]
name = "trifonius-engine"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
dsh_rest_api_client = "0.1.0"
dsh_sdk = { version = "0.4.4", features = ["bootstrap", "rdkafka", "rest-token-fetcher"], default-features = false }

async-trait = "0.1.81"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.15"

# Move dependency to dev-dependencies
env_logger = "0.11.3"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }
