[package]
name = "trifonius-engine"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1.81"
dsh_sdk = { version = "0.4.5", features = ["bootstrap"], default-features = false }
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.15"
trifonius-dsh-api = { path = "../dsh_api" }
uuid = { version = "1.10.0", features = ["v4"] }

# Move dependency to dev-dependencies
[dev-dependencies]
env_logger = "0.11.4"
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
