[package]
name = "trifonius-engine"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1"
dsh-api = { path = "../dsh_api" }
dsh_sdk = { version = "0.4", features = ["bootstrap"], default-features = false }
lazy_static = "1.5"
log = "0.4"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
toml = "0.8"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
